--- a/code/day01/Makefile
+++ b/code/day01/Makefile
@@ -1,2 +1,4 @@
 server:
-	g++ server.cpp -o server && g++ client.cpp -o client
+	g++ server.cpp -o server -lws2_32 && g++ client.cpp -o client -lws2_32
+
+
